When creating sockets for ioctl() use AF_INET6 or AF_INET

This fixes issues on IPv6-only linux computers.

BUG=694860

Review-Url: https://codereview.chromium.org/2890773002
Cr-Commit-Position: refs/heads/master@{#472556}