net/base/network_interfaces_linux.h
@@ -12,6 +12,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <string>
 #include <unordered_set>
 
+#include "base/files/scoped_file.h"
 #include "net/base/address_tracker_linux.h"
 #include "net/base/net_export.h"
 #include "net/base/network_interfaces.h"
@@ -38,6 +39,9 @@ NET_EXPORT bool GetNetworkListImpl(
 NET_EXPORT std::string GetWifiSSIDFromInterfaceListInternal(
     const NetworkInterfaceList& interfaces,
     internal::GetInterfaceSSIDFunction get_interface_ssid);
+
+// Returns a socket useful for performing ioctl()s.
+base::ScopedFD GetSocketForIoctl();
 
 }  // namespace internal
 }  // namespace net
